--- a/ajuda.html
+++ b/ajuda.html
@@ -1,1 +1,16 @@
-ajuda.html
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+	<meta charset="UTF-8">
+	<title>Ajuda</title>
+</head>
+<body>
+<header>
+</header>
+<main>
+</main>
+<footer>
+</footer>
+</body>
+</html>
