--- a/Categorias.html
+++ b/Categorias.html
@@ -1,1 +1,14 @@
-Categorias
+<!DOCTYPE html>
+<html lang="pt-br>
+
+<head>
+</head>
+<body>
+<header>
+</header
+<main>
+</main>
+<footer>
+</footer>
+</body>
+</html>
