--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Index.html
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+</head>
+
+<body>
+    <header>
+    </header>
+    <main>
+    </main>
+    <footer>
+    </footer>
+</body>
+
+</html>
