--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="pt-br">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Mentalix</title>
+
+    <link rel="stylesheet" href="Css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+    </style>
 </head>
 
 <body>
@@ -10,6 +18,14 @@
     <main>
     </main>
     <footer>
+        <img src="Assets/Logo.png">
+        <div class="links">
+            <p>Veja nosso trabalho:</p>
+            <img width="45px" alt="GitHub" title="GitHub" src="Assets/GitHub.png">
+            <img width="45px" alt="Trello" title="Trello" src="Assets/Trello.png">
+            <img width="45px" alt="Figma" title="Figma" src="Assets/Figma.png">
+        </div>
+        <p class="copyright">&copy; Copyright Mentalix - 2021</p>
     </footer>
 </body>
 
