linkando ícones do footer com sites

--- a/Categorias.html
+++ b/Categorias.html
@@ -21,9 +21,12 @@
         <img src="Assets/Logo.png">
         <div class="links">
             <p>Veja nosso trabalho:</p>
-            <img width="45px" alt="GitHub" title="GitHub" src="Assets/GitHub.png">
-            <img width="45px" alt="Trello" title="Trello" src="Assets/Trello.png">
-            <img width="45px" alt="Figma" title="Figma" src="Assets/Figma.png">
+            <a href="https://github.com/becabelin/tribo-fenix">
+            <img width="45px" alt="GitHub" title="GitHub" src="Assets/GitHub.png"></a>
+            <a href="https://trello.com/b/yffyWGxS/tribo-f%C3%AAnix">
+            <img width="45px" alt="Trello" title="Trello" src="Assets/Trello.png"></a>
+            <a href="https://www.figma.com/file/brqwqnaSdLg1QYLtohYKHS/Mentalix?node-id=0%3A1">
+            <img width="45px" alt="Figma" title="Figma" src="Assets/Figma.png"><a>
         </div>
         <p class="copyright">&copy; Copyright Mentalix - 2021</p>
     </footer>
