--- a/ajuda.html
+++ b/ajuda.html
@@ -14,6 +14,12 @@
 
 <body>
     <header>
+        <div class= "navbar">
+            <img class="logo 2" alt="Logo 2" src="Assets/Logo 2.png" height="58px" width="58px">
+            <img class="vector" alt="Vector" src="Assets/Vector.png">
+            <img class="layout" alt="Layout-fluid" src="Assets/Layout-fluid.png">
+            <img class="vector2" alt="Vector 2" title="Vector 2" src="Assets/Vector 2.png">
+            </div>
     </header>
     <main>
     </main>
