--- a/ajuda.html
+++ b/ajuda.html
@@ -22,7 +22,25 @@
             </div>
     </header>
     <main>
+        <h1>FALE COM A MENTALIX</h1>
+        <p>O "Fale com a Mentalix" é uma iniciativa para tirar dúvidas e melhorar a comunicação com você. Sugestões, reclamações e comentários serão bem-vindos para o aprimoramento do nosso site.</p>
+        <div class="formulario">
+        <div class="dadosformulario">
+        <p>NOME *</p>
+        <div class= "quadroformulario"></div>
+        <p>E-MAIL *</p>
+        <div class= "quadroformulario"></div>
+        <p>CELULAR *</p>
+        <div class= "quadroformulario"></div>
+        <p>ASSUNTO *</p>
+        <div class= "quadroformulario"></div>
+        <p class="mensagem">MENSAGEM *</p>
+        <div class= "quadro2formulario"></div>
+        </div></div>
     </main>
+    <div class= "tamanho">
+    <button class= "enviar">ENVIAR</button>
+    </div>
     <footer>
         <img src="Assets/Logo.png">
         <div class="links">
