--- a/ajuda.html
+++ b/ajuda.html
@@ -7,6 +7,7 @@
     <title>Mentalix - Ajuda</title>
 
     <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="Css/ajuda.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
     </style>
@@ -14,43 +15,45 @@
 
 <body>
     <header>
-        <div class= "navbar">
+        <div class="navbar">
             <img class="logo 2" alt="Logo 2" src="Assets/Logo 2.png" height="58px" width="58px">
             <img class="vector" alt="Vector" src="Assets/Vector.png">
             <img class="layout" alt="Layout-fluid" src="Assets/Layout-fluid.png">
             <img class="vector2" alt="Vector 2" title="Vector 2" src="Assets/Vector 2.png">
-            </div>
+        </div>
     </header>
     <main>
         <h1>FALE COM A MENTALIX</h1>
         <p>O "Fale com a Mentalix" é uma iniciativa para tirar dúvidas e melhorar a comunicação com você. Sugestões, reclamações e comentários serão bem-vindos para o aprimoramento do nosso site.</p>
         <div class="formulario">
-        <div class="dadosformulario">
-        <p>NOME *</p>
-        <div class= "quadroformulario"></div>
-        <p>E-MAIL *</p>
-        <div class= "quadroformulario"></div>
-        <p>CELULAR *</p>
-        <div class= "quadroformulario"></div>
-        <p>ASSUNTO *</p>
-        <div class= "quadroformulario"></div>
-        <p class="mensagem">MENSAGEM *</p>
-        <div class= "quadro2formulario"></div>
-        </div></div>
+            <div class="dadosformulario">
+                <p>NOME *</p>
+                <div class="quadroformulario"></div>
+                <p>E-MAIL *</p>
+                <div class="quadroformulario"></div>
+                <p>CELULAR *</p>
+                <div class="quadroformulario"></div>
+                <p>ASSUNTO *</p>
+                <div class="quadroformulario"></div>
+                <p class="mensagem">MENSAGEM *</p>
+                <div class="quadro2formulario"></div>
+            </div>
+        </div>
     </main>
-    <div class= "tamanho">
-    <button class= "enviar">ENVIAR</button>
+    <div class="tamanho">
+        <button class="enviar">ENVIAR</button>
     </div>
     <footer>
         <img src="Assets/Logo.png">
         <div class="links">
             <p>Veja nosso trabalho:</p>
             <a href="https://github.com/becabelin/tribo-fenix">
-            <img width="45px" alt="GitHub" title="GitHub" src="Assets/GitHub.png"></a>
+                <img width="45px" alt="GitHub" title="GitHub" src="Assets/GitHub.png"></a>
             <a href="https://trello.com/b/yffyWGxS/tribo-f%C3%AAnix">
-            <img width="45px" alt="Trello" title="Trello" src="Assets/Trello.png"></a>
+                <img width="45px" alt="Trello" title="Trello" src="Assets/Trello.png"></a>
             <a href="https://www.figma.com/file/brqwqnaSdLg1QYLtohYKHS/Mentalix?node-id=0%3A1">
-            <img width="45px" alt="Figma" title="Figma" src="Assets/Figma.png"><a>
+                <img width="45px" alt="Figma" title="Figma" src="Assets/Figma.png">
+                <a>
         </div>
         <p class="copyright">&copy; Copyright Mentalix - 2021</p>
     </footer>
