--- a/ajuda.html
+++ b/ajuda.html
@@ -27,21 +27,21 @@
         <p>O "Fale com a Mentalix" é uma iniciativa para tirar dúvidas e melhorar a comunicação com você. Sugestões, reclamações e comentários serão bem-vindos para o aprimoramento do nosso site.</p>
         <div class="formulario">
             <div class="dadosformulario">
-                <p>NOME *</p>
+                <p>Nome*</p>
                 <div class="quadroformulario"></div>
-                <p>E-MAIL *</p>
+                <p>E-mail*</p>
                 <div class="quadroformulario"></div>
-                <p>CELULAR *</p>
+                <p>Celular*</p>
                 <div class="quadroformulario"></div>
-                <p>ASSUNTO *</p>
+                <p>Assunto*</p>
                 <div class="quadroformulario"></div>
-                <p class="mensagem">MENSAGEM *</p>
+                <p class="mensagem">Mensagem*</p>
                 <div class="quadro2formulario"></div>
             </div>
         </div>
     </main>
     <div class="tamanho">
-        <button class="enviar">ENVIAR</button>
+        <button class="enviar">Enviar</button>
     </div>
     <footer>
         <img src="Assets/Logo.png">
