começando pagina da home

--- a/ajuda.html
+++ b/ajuda.html
@@ -15,46 +15,47 @@
 
 <body>
     <header>
-        <div class= "navbar">
+        <div class="navbar">
             <img class="logo 2" alt="Logo 2" src="Assets/Logo 2.png" height="58px" width="58px">
             <img class="vector" alt="Vector" src="Assets/Vector.png">
-            <img class="layout" alt="Layout-fluid" src="Assets/Layout-fluid.png">
-            <img class="vector2" alt="Vector 2" title="Vector 2" src="Assets/Vector 2.png">
-            </div>
+            <img class="layout" alt="categorias" src="Assets/categorias.png">
+            <img class="vector2" alt="ajuda" title="ajuda" src="Assets/ajuda.png">
+        </div>
     </header>
     <main>
         <h1>FALE COM A MENTALIX</h1>
         <p>O "Fale com a Mentalix" é uma iniciativa para tirar dúvidas e melhorar a comunicação com você. Sugestões, reclamações e comentários serão bem-vindos para o aprimoramento do nosso site.</p>
-            <form>
-        <div class="borda-formulario">
-        <div class="formulario">
-            <label for= "nome">Nome *</label>
-            <input type= "text" id="nome">
+        <form>
+            <div class="borda-formulario">
+                <div class="formulario">
+                    <label for="nome">Nome *</label>
+                    <input type="text" id="nome">
 
-            <label for= "email">E-mail *</label>
-            <input type= "email" id= "email" required placeholder= "seuemail@dominio.com">
+                    <label for="email">E-mail *</label>
+                    <input type="email" id="email" required placeholder="seuemail@dominio.com">
 
-            <label for= "telefone">Celular *</label>
-            <input type= "tel" id= "telefone" required placeholder= "(XX) XXXX-XXXX">
-            
-            <label for= "assunto">Assunto *</label>
-            <input type= "text" id="assunto" >
-            
-            <label for= "mensagem">Mensagem *</label>
-            <textarea cols= "70" rows= "10" id= "mensagem"></textarea>
-    </form>
-        <button class= "enviar"><img src= "Assets/Vector 3.png"  height ="30" width="30">  ENVIAR</button>
+                    <label for="telefone">Celular *</label>
+                    <input type="tel" id="telefone" required placeholder="(XX) XXXX-XXXX">
+
+                    <label for="assunto">Assunto *</label>
+                    <input type="text" id="assunto">
+
+                    <label for="mensagem">Mensagem *</label>
+                    <textarea cols="70" rows="10" id="mensagem"></textarea>
+        </form>
+        <button class="enviar"><img src= "Assets/play.png"  height ="30" width="30">  ENVIAR</button>
     </main>
     <footer>
         <img src="Assets/Logo.png">
         <div class="links">
             <p>Veja nosso trabalho:</p>
             <a href="https://github.com/becabelin/tribo-fenix">
-            <img width="45px" alt="GitHub" title="GitHub" src="Assets/GitHub.png"></a>
+                <img width="45px" alt="GitHub" title="GitHub" src="Assets/GitHub.png"></a>
             <a href="https://trello.com/b/yffyWGxS/tribo-f%C3%AAnix">
-            <img width="45px" alt="Trello" title="Trello" src="Assets/Trello.png"></a>
+                <img width="45px" alt="Trello" title="Trello" src="Assets/Trello.png"></a>
             <a href="https://www.figma.com/file/brqwqnaSdLg1QYLtohYKHS/Mentalix?node-id=0%3A1">
-            <img width="45px" alt="Figma" title="Figma" src="Assets/Figma.png"><a>
+                <img width="45px" alt="Figma" title="Figma" src="Assets/Figma.png">
+                <a>
         </div>
         <p class="copyright">&copy; Copyright Mentalix - 2021</p>
     </footer>
