--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mentalix</title>
 
     <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="Css/home.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
     </style>
@@ -16,28 +17,39 @@
     <header>
         <div class="navbar">
             <img class="logo 2" alt="Logo 2" src="Assets/Logo 2.png" height="58px" width="58px">
-            <img class="vector" alt="Vector" src="Assets/Vector.png">
-            <img class="layout" alt="Layout-fluid" src="Assets/Layout-fluid.png">
-            <img class="vector2" alt="Vector 2" title="Vector 2" src="Assets/Vector 2.png">
+            <img class="home" alt="home" src="Assets/home.png">
+            <img class="categorias" alt="categorias" src="Assets/categorias.png">
+            <img class="ajuda" alt="ajuda" title="ajuda" src="Assets/ajuda.png">
         </div>
-
     </header>
+
     <main>
+        <h1 class="titulo-principal">Título do vídeo principal</h1>
+        <img class="som-classificacao" alt="som e classificação" src="Assets/Som e classificação.png">
+        <p class="categorias">Saúde mental</p>
+        <p class="categorias">Exercícios</p>
+        <p class="categorias">Alimentação</p>
+        <button class="botoes">Ver todas as categorias</button>
+        <h1>Sobre a Mentalix</h1>
+        <p>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
+        <p>Conheça o nosso time:</p>
     </main>
+
     <footer>
-        <img src="Assets/Logo.png">
-        <div class="links">
+        <img src="Assets/Logo.png ">
+        <div class="links ">
             <p>Veja nosso trabalho:</p>
-            <a href="https://github.com/becabelin/tribo-fenix">
-                <img class="github" width="45px" alt="GitHub" title="GitHub" src="Assets/GitHub.png"></a>
-            <a href="https://trello.com/b/yffyWGxS/tribo-f%C3%AAnix">
-                <img class="trello" width="45px" alt="Trello" title="Trello" src="Assets/Trello.png"></a>
-            <a href="https://www.figma.com/file/brqwqnaSdLg1QYLtohYKHS/Mentalix?node-id=0%3A1">
-                <img class="figma" width="45px" alt="Figma" title="Figma" src="Assets/Figma.png">
+            <a href="https://github.com/becabelin/tribo-fenix ">
+                <img class="github " width="45px " alt="GitHub " title="GitHub " src="Assets/GitHub.png "></a>
+            <a href="https://trello.com/b/yffyWGxS/tribo-f%C3%AAnix ">
+                <img class="trello " width="45px " alt="Trello " title="Trello " src="Assets/Trello.png "></a>
+            <a href="https://www.figma.com/file/brqwqnaSdLg1QYLtohYKHS/Mentalix?node-id=0%3A1 ">
+                <img class="figma " width="45px " alt="Figma " title="Figma " src="Assets/Figma.png ">
                 <a>
         </div>
-        <p class="copyright">&copy; Copyright Mentalix - 2021</p>
+        <p class="copyright ">&copy; Copyright Mentalix - 2021</p>
     </footer>
+
 </body>
 
 </html>
