--- a/Categorias.html
+++ b/Categorias.html
@@ -17,9 +17,9 @@
     <header>
         <div class="navbar">
             <img class="logo 2" alt="Logo 2" src="Assets/Logo 2.png" height="58px" width="58px">
-            <img class="vector" alt="Vector" src="Assets/Vector.png">
-            <img class="layout" alt="categorias" src="Assets/categorias.png">
-            <img class="vector2" alt="ajuda" title="ajuda" src="Assets/ajuda.png">
+            <img class="home" alt="home" src="Assets/home.png">
+            <img class="categorias" alt="categorias" src="Assets/categorias.png">
+            <img class="ajuda" alt="ajuda" title="ajuda" src="Assets/ajuda.png">
         </div>
     </header>
     <main>
