--- a/ajuda.html
+++ b/ajuda.html
@@ -29,22 +29,37 @@
             <div class="borda-formulario">
                 <div class="formulario">
                     <label for="nome">Nome *</label>
-                    <input type="text" id="nome">
+                    <input type="text" id="nome" required>
 
                     <label for="email">E-mail *</label>
                     <input type="email" id="email" required placeholder="seuemail@dominio.com">
 
-                    <label for="telefone">Celular *</label>
-                    <input type="tel" id="telefone" required placeholder="(XX) XXXX-XXXX">
+                    <label for="celular">Celular *</label>
+                    <input type="tel" id="celular" required placeholder="(XX) XXXX-XXXX">
 
                     <label for="assunto">Assunto *</label>
-                    <input type="text" id="assunto">
+                <fieldset>
+                    <select>
+                        <option>Sugestão</option>
+                        <option>Elogio</option>
+                        <option>Dúvida</option>
+                        <option>Reclamação</option>
+                    </select>
+                </fieldset>
+                    <input type="text" id="assunto" required>
 
                     <label for="mensagem">Mensagem *</label>
-                    <textarea cols="70" rows="10" id="mensagem"></textarea>
+                    <textarea cols="70" rows="10" id="mensagem" required></textarea>
+
+                <p class= "aviso">* todos os campos são obrigatórios</p>
         </form>
-        <button class="enviar"><img src= "Assets/play.png"  height ="30" width="30">  ENVIAR</button>
+        <button class="enviar" input type="submit" onclick="clicked();"><img src= "Assets/play.png"  height ="30" width="30">  ENVIAR</button>
     </main>
+    <script type="text/javascript">
+ function clicked(){
+        alert("Seu formulário foi enviado!");
+}
+</script>
     <footer>
         <img src="Assets/Logo.png">
         <div class="links">
