adicionando componentes da página home

--- a/index.html
+++ b/index.html
@@ -33,6 +33,37 @@
         <h1>Sobre a Mentalix</h1>
         <p>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
         <p>Conheça o nosso time:</p>
+
+        <img src="Assets/Alisson Bosco.png">
+        <p>Alisson Bosco</p>
+        <p>Front-end</p>
+
+        <img src="Assets/Ana Luíza Cardoso.png">
+        <p>Ana Luíza Cardoso</p>
+        <p>Front-end</p>
+
+        <img src="Assets/Isabelle Victoria.png">
+        <p>Isabelle Victoria</p>
+        <p>Design</p>
+
+        <img src="Assets/Matheus Henrique.png">
+        <p>Matheus Henrique</p>
+        <p>Back-end</p>
+
+        <img src="Assets/Raissa Karoliny.png">
+        <p>Raissa Karoliny</p>
+        <p>Design</p>
+
+        <img src="Assets/Rebeca Alves.png">
+        <p>Rebeca Alves</p>
+        <p>Design e Front-end</p>
+
+        <img src="Assets/Tharllyene Soares.png">
+        <p>Tharllyene Soares</p>
+        <p>Front-end e Back-end</p>
+
+        <p>Está com dúvidas? Visite a nossa central de ajuda!</p>
+        <button>Central de ajuda</button
     </main>
 
     <footer>
