--- a/Categorias.html
+++ b/Categorias.html
@@ -25,6 +25,7 @@
 
     </header>
     <main>
+       <button class="botoes"> Categorias</button>
     </main>
     <footer>
         <img src="Assets/Logo.png">
