Botões da navbar linkado com as paginas

--- a/Categorias.html
+++ b/Categorias.html
@@ -15,11 +15,11 @@
 
 <body>
     <header>
-        <div class="navbar">
+        <div id="navbar">
             <img class="logo 2" alt="Logo 2" src="Assets/Logo 2.png" height="58px" width="58px">
-            <img class="home" alt="home" src="Assets/home.png">
-            <img class="categorias" alt="categorias" src="Assets/categorias.png">
-            <img class="ajuda" alt="ajuda" title="ajuda" src="Assets/ajuda.png">
+            <a href="index.html"><img class="home" alt="home" src="Assets/Home.png"></a>
+            <a href="#navbar"><img class="categorias" alt="categorias" src="Assets/Categorias.png"></a>
+            <a href="ajuda.html"><img class="ajuda" alt="ajuda" title="ajuda" src="Assets/Ajuda.png"></a>
         </div>
      
 
