adicionando botão de categorias

--- a/Categorias.html
+++ b/Categorias.html
@@ -25,10 +25,9 @@
 
     </header>
     <main>
-       <button class="botoes"> Categorias</button>
+       <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/play.png"  height ="30" width="30"> CATEGORIAS </button>
     </main>
     <footer>
-        <img src="Assets/Logo.png">
         <div class="links">
             <p>Veja nosso trabalho:</p>
             <a href="https://github.com/becabelin/tribo-fenix">
