Correção do nome do icon play

--- a/Categorias.html
+++ b/Categorias.html
@@ -25,7 +25,7 @@
 
     </header>
     <main>
-       <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/play.png"  height ="30" width="30"> CATEGORIAS </button>
+       <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30"> CATEGORIAS </button>
     </main>
     <footer>
          <img src="Assets/Logo.png">
