--- a/ajuda.html
+++ b/ajuda.html
@@ -53,7 +53,7 @@
 
                 <p class= "aviso">* todos os campos são obrigatórios</p>
         </form>
-        <button class="enviar" input type="submit" onclick="clicked();"><img src= "Assets/play.png"  height ="30" width="30">  ENVIAR</button>
+        <button class="enviar" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30">  ENVIAR</button>
     </main>
     <script type="text/javascript">
  function clicked(){
