correção de um erro

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Front-end e Back-end</p>
 
         <p>Está com dúvidas? Visite a nossa central de ajuda!</p>
-        <button>Central de ajuda</button
+        <button>Central de ajuda</button>
     </main>
 
     <footer>
