--- a/Categorias.html
+++ b/Categorias.html
@@ -25,6 +25,7 @@
 
     </header>
     <main>
+        <img class="paisagem" alt="paisagem" src="Assets/paisagem.jpeg">
        <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30"> CATEGORIAS </button>
     </main>
     <footer>
