--- a/Categorias.html
+++ b/Categorias.html
@@ -26,6 +26,9 @@
     </header>
     <main>
         <img class="paisagem" alt="paisagem" src="Assets/paisagem.jpeg">
+        <div class="mentalix"
+             >Mentalix
+        </div>
        <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30"> CATEGORIAS </button>
     </main>
     <footer>
