Correção do campo de busca

--- a/Categorias.html
+++ b/Categorias.html
@@ -1,5 +1,3 @@
-<!--Quando for colocar os videos de cada categoria, pra cada tema colocar um id="nome da categoria" para a barra de pesquisa funcionar, exemplo: para os videos de bem estar antes de anexar, colocar id="Bem Estar".-->
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -23,10 +21,10 @@
             <a href="#navbar"><img class="categorias" alt="categorias" src="Assets/Categorias.png"></a>
             <a href="ajuda.html"><img class="ajuda" alt="ajuda" title="ajuda" src="Assets/Ajuda.png"></a>
         </div>
-            
+     
+
     </header>
     <main>
-<<<<<<< HEAD
         <div id="divBusca">
   <img src="Assets/lupa.png" alt="Buscar..."/>
   <input type="text" class="campo" placeholder="Buscar..."/>
@@ -39,8 +37,7 @@
         <div class="mentalix"
              >Mentalix
         </div>
-       <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30"> CATEGORIAS </button>
-
+       <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30">  </button>
     </main>
     <footer>
          <img src="Assets/Logo.png">
