--- a/Categorias.html
+++ b/Categorias.html
@@ -37,7 +37,7 @@
         <div class="mentalix"
              >Mentalix
         </div>
-       <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30">  </button>
+       <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30"> Categorias </button>
     </main>
     <footer>
          <img src="Assets/Logo.png">
