correção de palavras
estavam em cima do botão de categorias na navbar

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <main>
         <h1 class="titulo-principal">Título do vídeo principal</h1>
         <img class="som-classificacao" alt="som e classificação" src="Assets/Som e classificação.png">
-        <p class="categorias">Saúde mental</p>
-        <p class="categorias">Exercícios</p>
-        <p class="categorias">Alimentação</p>
+        <p class="categorias"></p>
+        <p class="categorias"></p>
+        <p class="categorias"></p>
         <button class="botoes">Ver todas as categorias</button>
         <h1>Sobre a Mentalix</h1>
         <p>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
