--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Front-end e Back-end</p>
 
         <p>Está com dúvidas? Visite a nossa central de ajuda!</p>
-        <button>Central de ajuda</button>
+        <button class= botaoajuda input type="submit" onclick=clicked();  height ="30" width="30" > Central de ajuda </button> 
     </main>
 
     <footer>
