--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>Tharllyene Soares</p>
         <p>Front-end e Back-end</p>
 
-        <p>Está com dúvidas? Visite a nossa central de ajuda!</p>
+         <p class="textoajuda" >Está com dúvidas? Visite a nossa central de ajuda!</p>
         <button class= botaoajuda input type="submit" onclick=clicked();  height ="30" width="30" > Central de ajuda </button> 
     </main>
 
