--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
         <p class="categorias"></p>
         <p class="categorias"></p>
         <button class="botoes">Ver todas as categorias</button>
-        <h1>Sobre a Mentalix</h1>
-        <p>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
-        <p>Conheça o nosso time:</p>
+        <h2 class="Sobre"> Sobre a Mentalix</h2>
+        
+        <p class= "sobrementalix"><br>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
+        <p class= "time"><br> Conheça o nosso time:</p>
 
-        <img src="Assets/Alisson Bosco.png">
+ <!--<img src="Assets/Alisson Bosco.png">
         <p>Alisson Bosco</p>
         <p>Front-end</p>
 
@@ -61,6 +62,7 @@
         <img src="Assets/Tharllyene Soares.png">
         <p>Tharllyene Soares</p>
         <p>Front-end e Back-end</p>
+    -->
 
          <p class="textoajuda" >Está com dúvidas? Visite a nossa central de ajuda!</p>
         <button class= botaoajuda input type="submit" onclick=clicked();  height ="30" width="30" > Central de ajuda </button> 
