--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="botoes">Ver todas as categorias</button>
         <h2 class="Sobre"> Sobre a Mentalix</h2>
         
-        <p class= "sobrementalix"><br>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
+        <p class= "sobrementalix"><br>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso site é voltado para o autocuidado com o corpo e a mente.</p>
         <p class= "time"><br> Conheça o nosso time:</p>
 
  <!--<img src="Assets/Alisson Bosco.png">
