--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p class="categorias"></p>
         <p class="categorias"></p>
         <p class="categorias"></p>
-        <button class="botoes">Ver todas as categorias</button>
+        <button class="botaocategorias">Ver todas as categorias</button>
         <h2 class="Sobre"> Sobre a Mentalix</h2>
         
         <p class= "sobrementalix"><br>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso site é voltado para o autocuidado com o corpo e a mente.</p>
