adicionando as categorias

--- a/Categorias.html
+++ b/Categorias.html
@@ -38,6 +38,12 @@
              >Mentalix
         </div>
        <button class="botoes" input type="submit" onclick="clicked();"><img src= "Assets/Play.png"  height ="30" width="30"> Categorias </button>
+        <img class="saudemental" alt="saudemental" src="Assets/Saúde mental.jpg"> <p class="saudementaltext"> Saúde Mental</p>
+        <img class="exercicios" alt="exercicios" src="Assets/Exercícios.jpg"> <p class="exerciciostext"> Exercicios</p>
+        <img class="alimentacao" alt="alimentacao" src="Assets/Alimentação.png"> <p class="alimentacaotext">Alimentação</p>
+        <img class="bemestar" alt="bemestar" src="Assets/Bem-estar.jpg"> <p class="bemestartext">Bem Estar</p>
+        <img class="saudedosono" alt="saudedosono" src="Assets/Saúde do sono.png"> <p class="saudedosonotext">Saúde do sono</p>
+        <img class="skincare" alt="skincare" src="Assets/Skin care.png"> <p class="skincaretext">Skin Care</p>
     </main>
     <footer>
          <img src="Assets/Logo.png">
