--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
             <a href="Categorias.html"><img class="categorias" alt="categorias" src="Assets/Categorias.png"></a>
             <a href="ajuda.html"><img class="ajuda" alt="ajuda" title="ajuda" src="Assets/Ajuda.png"></a>
         </div>
+
     </header>
 
     <main>
-        <h1 class="titulo-principal">Título do vídeo principal</h1>
+      <h1 class="titulo-principal">Título do vídeo principal</h1>
         <img class="som-classificacao" alt="som e classificação" src="Assets/Som e classificação.png">
-        <p class="categorias"></p>
-        <p class="categorias"></p>
-        <p class="categorias"></p>
-        <button class="botaocategorias">Ver todas as categorias</button>
-        <h2 class="Sobre"> Sobre a Mentalix</h2>
-        
-        <p class= "sobrementalix"><br>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso site é voltado para o autocuidado com o corpo e a mente.</p>
-        <p class= "time"><br> Conheça o nosso time:</p>
+        <p class="categorias">Saúde mental</p>
+        <p class="categorias">Exercícios</p>
+        <p class="categorias">Alimentação</p>
+        <button class="botoes">Ver todas as categorias</button>
+        <h1>Sobre a Mentalix</h1>
+        <p>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
+        <p>Conheça o nosso time:</p>
 
- <!--<img src="Assets/Alisson Bosco.png">
+        <img src="Assets/Alisson Bosco.png">
         <p>Alisson Bosco</p>
         <p>Front-end</p>
 
@@ -62,10 +62,9 @@
         <img src="Assets/Tharllyene Soares.png">
         <p>Tharllyene Soares</p>
         <p>Front-end e Back-end</p>
-    -->
 
-         <p class="textoajuda" >Está com dúvidas? Visite a nossa central de ajuda!</p>
-        <button class= botaoajuda input type="submit" onclick=clicked();  height ="30" width="30" > Central de ajuda </button> 
+        <p>Está com dúvidas? Visite a nossa central de ajuda!</p>
+        <button>Central de ajuda</button>
     </main>
 
     <footer>
