Adicionando carrossel, icon e pasta .js

--- a/ajuda.html
+++ b/ajuda.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Mentalix - Ajuda</title>
 
+    <link rel="icon" href="Assets/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/ajuda.css">
     <style>
