correção dos erros

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="Assets/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/home.css">
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+   <!-- @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');<--->
     
 </head>
 
@@ -51,9 +51,9 @@
 
 
         <button class="botaocategorias">Ver todas as categorias</button>
-        <h1>Sobre a Mentalix</h1>
-        <p>Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
-        <p>Conheça o nosso time:</p>
+        <h1 class="Sobre">Sobre a Mentalix</h1>
+        <p class= "sobrementalix">Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
+        <p class="time">Conheça o nosso time:</p>
 
          <img class="alisson" alt= "alisson" src= "Assets/Alisson Bosco.png">
          <p class="alissontext">Alisson Bosco<br> Front-end</p>
@@ -79,8 +79,8 @@
         <img class="tharllyene" alt="therllyene" src="Assets/Tharllyene Soares.png">
         <p class="tharllyenetext">Tharllyene Soares<br>Front-end e Back-end</p>
 
-        <p>Está com dúvidas? Visite a nossa central de ajuda!</p>
-        <button class= "botaocategorias">Central de ajuda</button>
+        <p class="textoajuda">Está com dúvidas? Visite a nossa central de ajuda!</p>
+        <button class= "botaoajuda">Central de ajuda</button>
     </main>
 
     <footer>
@@ -101,3 +101,4 @@
 </body>
 
 </html>
+
