correção da fonte

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="icon" href="Assets/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/home.css">
-   <!-- @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');<--->
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+    </style>
     
 </head>
 
