--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <script src="JavaScript/script.js"></script>
 
 
-        <button class="botaocategorias">Ver todas as categorias</button>
+         <a href="Categorias.html"> <button class="botaocategorias"input type="submit"> Ver todas as categorias</button></a>
         <h1 class="Sobre">Sobre a Mentalix</h1>
         <p class= "sobrementalix">Mentalix é uma rede de streaming baseada em temas de saúde no geral.<br> Teremos categorias de saúde mental, alimentar, física e etc. Ou seja, nosso <br>site é voltado para o autocuidado com o corpo e a mente.</p>
         <p class="time">Conheça o nosso time:</p>
