linkando botão da central de ajuda

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p class="tharllyenetext">Tharllyene Soares<br>Front-end e Back-end</p>
 
         <p class="textoajuda">Está com dúvidas? Visite a nossa central de ajuda!</p>
-        <button class= "botaoajuda">Central de ajuda</button>
+         <a href="ajuda.html"><button class= "botaoajuda" input type="submit">Central de ajuda</button></a>
     </main>
 
     <footer>
