--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main>
 
-        <h1 class="titulo-principal">Título do vídeo principal</h1>
+        <h1 class="titulo-principal">Mentalix</h1>
         <img class="som-classificacao" alt="som e classificação" src="Assets/Som e classificação.png">
 
        <p align="center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/ACqdJSuNgX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
