colocando copyrigth de volta

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <img class="figma " width="45px " alt="Figma " title="Figma " src="Assets/Figma.png ">
                 <a>
         </div>
-    
+     <p class="copyright">&copy; Copyright Mentalix - 2021</p>
     </script>
 </body>
 
