--- a/index.html
+++ b/index.html
@@ -31,7 +31,29 @@
 
         <h1 class="titulo-principal">Mentalix</h1>
         <img class="som-classificacao" alt="som e classificação" src="Assets/Som e classificação.png">
-
+ <h2 class="saude">Saúde mental</h2>
+        <div class="container">
+            <button type="button" id="moveLeft" class="btn-nav">
+      ᐊ
+    </button>
+            <div class="container-indicators">
+                <div class="indicator active" data-index=0></div>
+                <div class="indicator" data-index=1></div>
+            </div>
+            <div class="slider" id="mySlider">
+                <div class="movie" id="movie0">
+                    <img src="miniaturas/saude mental 1.jpg">
+                    <div class="description">
+                        <div class="description__buttons-container">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button type="button" id="moveRight" class="btn-nav">
+      ᐅ
+    </button>
+        </div>
+        <script src="JavaScript/script.js"></script>
        <p align="center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/ACqdJSuNgX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
         <img class="som-classificacao" alt="som e classificação" src="Assets/Som e classificação.png">
 
