--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h1 class="titulo-principal">Título do vídeo principal</h1>
         <img class="som-classificacao" alt="som e classificação" src="Assets/Som e classificação.png">
 
-       <p align="center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/ACqdJSuNgX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-     <h1 class="titulo-principal">Título do vídeo principal</h1>
+        <p align="center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/ACqdJSuNgX8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+        <h1 class="titulo-principal">Título do vídeo principal</h1>
         <img class="som-classificacao" alt="som e classificação" src="Assets/Som e classificação.png">
 
         <a href="Categorias.html"> <button class="botaocategorias" input type="submit"> Ver todas as categorias</button></a>
@@ -90,8 +90,8 @@
                 <img class="figma " width="45px " alt="Figma " title="Figma " src="Assets/Figma.png ">
                 <a>
         </div>
-    
-    </script>
+
+    </footer>
 </body>
 
 </html>
